<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:paddingBottom="2dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_form_size"
            android:gravity="center_horizontal"
            android:hint="@string/hint_name"
            android:singleLine="true"
            android:id="@+id/tvName"
            app:validateEmpty="@{true}"
            android:inputType="text"
            app:validateMinLength="@{4}"/>
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingBottom="2dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_form_size"
                android:gravity="center_horizontal"
                android:hint="@string/hint_direction"
                android:singleLine="true"
                android:id="@+id/tvDireccion"
                app:validateEmpty="@{true}"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingBottom="2dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_form_size"
                android:gravity="center_horizontal"
                android:hint="@string/hint_phone"
                android:singleLine="true"
                android:id="@+id/tvPhone"
                app:validateEmpty="@{true}"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingBottom="2dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_form_size"
                android:gravity="center_horizontal"
                android:hint="@string/hint_latitude"
                android:singleLine="true"
                android:id="@+id/tvLatitude"
                app:validateEmpty="@{true}"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingBottom="2dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_form_size"
                android:gravity="center_horizontal"
                android:hint="@string/hint_longitude"
                android:singleLine="true"
                android:id="@+id/tvLogitude"
                app:validateEmpty="@{true}"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/saveLocation"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>
    </LinearLayout>
    </ScrollView>
</FrameLayout>
</layout>