<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="@dimen/title_width"
            android:layout_height="@dimen/title_height"
            android:textSize="@dimen/text_title_size"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:text="@string/title_login"
            />
    </LinearLayout>
<LinearLayout
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconTint="@color/colorBlack"
        app:endIconDrawable="@drawable/ic_email"

        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="@dimen/text_form_size"
            android:gravity="center_horizontal"
            android:hint="@string/hint_user"
            android:singleLine="true"
            android:id="@+id/tvUser"
            app:validateType='@{"email"}'
            app:validateMinLength="@{4}"
            android:inputType="textEmailAddress"
            app:validateEmpty="@{true}"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:paddingBottom="2dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_eye"
        app:passwordToggleTint="@color/colorBlack"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_form_size"
            android:gravity="center_horizontal"
            android:hint="@string/hint_pass"
            android:singleLine="true"
            android:id="@+id/tvPass"
            app:validateEmpty="@{true}"
            android:inputType="textPassword"
            app:validateMinLength="@{4}"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>
</LinearLayout>

</LinearLayout></layout>
